More Rug and admin command work

--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,8 @@ duder.exe
 duder.json
 output.json
 duder_permissions.json
-
 rugs/youtube.json
 rugs/raffle.json
 rugs/weather.json
 rugs/raffle.json
+avatars/*
