trying to add defult config

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,6 +9,8 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  CONFIG: ${{ secrets.CONFIG }}
+  PERMISSIONS: ${{ secrets.PERMISSIONS }}
 
 jobs:
   build-push:
