--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,5 +43,5 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           secrets: |
-            CONFIG=${{ secrets.CONFIG }}
-            PERMISSIONS=${{ secrets.PERMISSIONS }}
+            BOT_TOKEN=${{ secrets.BOTTOKEN }}
+            OWNERID=${{ secrets.OWNERID }}
