--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,6 +42,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: |
+          secrets: |
             BOT_TOKEN=${{ secrets.BOTTOKEN }}
             OWNERID=${{ secrets.OWNERID }}
