--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,5 +43,5 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           secrets: |
-            BOT_TOKEN=${{ secrets.BOTTOKEN }}
-            OWNERID=${{ secrets.OWNERID }}
+            "BOT_TOKEN=${{ secrets.BOTTOKEN }}"
+            "OWNERID=${{ secrets.OWNERID }}"
