--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,6 +9,8 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+  OWNERID: ${{ secrets.OWNERID }}
 
 jobs:
   build-push:
